# ChangeLog for dev-libs/crypto++
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/ChangeLog,v 1.63 2010/12/27 21:41:36 ranger Exp $

  27 Dec 2010; Brent Baude <ranger@gentoo.org> crypto++-5.6.1.ebuild:
  stable ppc64, bug 343373

  04 Nov 2010; Jeroen Roovers <jer@gentoo.org> crypto++-5.6.1.ebuild:
  Stable for HPPA (bug #343373).

  04 Nov 2010; Jeroen Roovers <jer@gentoo.org> crypto++-5.6.1.ebuild,
  +files/crypto++-5.6.1-sunos.patch:
  Fix building on HPPA (bug #343909). Wrap long lines. Replace spaces with
  tabs.

  04 Nov 2010; Markus Meier <maekke@gentoo.org> crypto++-5.6.1.ebuild:
  x86 stable, bug #343373

*crypto++-5.6.1 (27 Sep 2010)

  27 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +crypto++-5.6.1.ebuild, +files/crypto++-5.6.1-fix_build_system.patch:
  Version bump.

  25 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  crypto++-5.6.0-r1.ebuild:
  Delete "sse3" USE flag (bug #310791).

  13 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  crypto++-5.6.0-r1.ebuild:
  Fix tests (bug #308335).

  07 Mar 2010; Raúl Porcel <armin76@gentoo.org> crypto++-5.6.0-r1.ebuild:
  alpha/sparc stable wrt #300763

  07 Feb 2010; Markus Meier <maekke@gentoo.org> crypto++-5.6.0-r1.ebuild:
  amd64/x86 stable, bug #300763

  19 Jan 2010; nixnut <nixnut@gentoo.org> crypto++-5.6.0-r1.ebuild:
  ppc stable #300763

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> crypto++-5.6.0-r1.ebuild:
  Stable for HPPA (bug #300763).

  13 Jan 2010; Brent Baude <ranger@gentoo.org> crypto++-5.6.0-r1.ebuild:
  stable ppc64, bug 300763

*crypto++-5.6.0-r1 (24 Jul 2009)

  24 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +crypto++-5.6.0-r1.ebuild, +files/crypto++-5.6.0-fix_build_system.patch:
  Build shared library.

  07 Jul 2009; Gordon Malm <gengor@gentoo.org> metadata.xml:
  Minor grammar/spelling fixes.
