@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX crypto++-5.6.0-fix_build_system.patch 4916 RMD160 1d762f637f9dd5cad1ef0fa7edaad9b81f307a67 SHA1 c8968fe8d2dde15e515e43bdc0c78e9bf9720796 SHA256 facbc38cbd310058ed6d9a1d2cc868d00ec6f41b3840267ce701de14abfabe1c
 AUX crypto++-5.6.1-fix_build_system.patch 5008 RMD160 df6813be73acddba7aac0e70abd2c9ff75c5a4de SHA1 c514f778c97cb739f9e3a02f2c44ef86dcafa992 SHA256 cc2c823046f38c154f7cc6899ff2cb94bb378bfbbb534662246d378e751f0480
 AUX crypto++-5.6.1-sunos.patch 546 RMD160 69e22a1db8f5fefae1660cf1adbb2cca6600b2d9 SHA1 c21120d904eab8ec3531ebbab68a9663355ac098 SHA256 fb0bc4e48dc55100dd0a454b86a98c949faa79d77967840a9afa0e0ac1ac531c
@@ -7,6 +10,23 @@ DIST cryptopp561.zip 1069703 RMD160 a8a5b80c995c5d4ddafba228caf8866425212fbf SHA
 EBUILD crypto++-5.5.2-r1.ebuild 1604 RMD160 59a14887f8be587735a349ba7ddf9c91a7e2b0d2 SHA1 9e9ff3b1c171f350a7b92ecfeca668ef750b69e4 SHA256 0838d76207c20dd6f4ed26894f633557843cf807ae5ccb2cd72d68189c628793
 EBUILD crypto++-5.6.0-r1.ebuild 1383 RMD160 47dc57c3004fa0b5bb4718b2d2c5d8b8d57e2d6a SHA1 02727959dda01316bdacfd030e49c7d0c1738955 SHA256 9a0fc03ad16dcf768e194c25065bf47627302345ebc2bad0197f8e557dadd758
 EBUILD crypto++-5.6.0.ebuild 1598 RMD160 caae59ceba6198ca359bc7a563912f07ca9cdcce SHA1 25f6ee493565eb3b66aa0890407c186e97318264 SHA256 9c8301fe961079960f095a38611180a722f70309f2e189733d90dad8eb566f56
-EBUILD crypto++-5.6.1.ebuild 1429 RMD160 bd15957557fbdb104596d1a7b00f38d7f19393c8 SHA1 403e7f0349fa774a8e365b14e82e822e8b34f325 SHA256 c23ace092184a56dbf25fa18422dff6dd2a8c221a79d05e527c0899d6b20bb3b
-MISC ChangeLog 8653 RMD160 a3e30576f3750664f4b3ee60b5fd64e937e83e1b SHA1 8cd34de7c4772cfa871e241d171112057766ca9e SHA256 865d1f9b8d89a838401f2f6419f3846a95fb4123e2cca19b49220e8122b17dfe
+EBUILD crypto++-5.6.1.ebuild 1468 RMD160 6dda5a1b69e0fb88b6ff79abad32d4a7d905ca1d SHA1 9b80e16282b9281a66d3c5f6f40f24e7fcd64b52 SHA256 0fd3e486535b8657cbede6888752588f2b9e2bed7e20d0b8312dc44f5f8a549a
+MISC ChangeLog 9089 RMD160 db0f21502ac2946bd5a6c423874690c2b58ea2c8 SHA1 40b3b6f8469b701c927b9ca22e3dee56ad1d7532 SHA256 9621b5e845bb6f07461fc35a95620bdda5ccdf296083dc780741992861b64414
 MISC metadata.xml 251 RMD160 127ab6e8b8dd3f2a743bcd6bfea272c751b268ce SHA1 8d42822867803ce048112d88c0dd0ee9c81b6c2c SHA256 1015b452a49cd5d28354cfdaa180045d6b4c0b59dd7697f335a594438110238d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iQIcBAEBAgAGBQJNJ9/JAAoJEEsurZwMLhUxfPoP/jcOPAslJhi16Jeqf516V0ym
+S+UZKd3mOeLcJtJCrR7P49tmX0YxcuqXNhHbeZ6WUKoTi5SQCFJPwXbyGXD5tjiJ
+FNE/5oJ3wZgg291YmNhnZCwuY+lKnwTiRKBW/VP/Nfu8+s1Er6gRiLMxPvQZcivp
+KS5BPbqPvCFFA+ucP8yMvjtzUkrGTF92F84c9qtIQyubOfYWwp3yS4sKLj0VYbYg
+32pBvJJvDWw64ELLLeJYqIBiGE2nCrK/upDV1PGeYGCmabgPj/u3kf9G9EIrgpow
+xXv6XqCDwsVDgAsAigT8PKrghnT8nLGWv6UgILYrC1HJAsW6CLaCVKDoKT08igXl
+4ocDciqXhliOF/K55pzqiC16hXMRT9Nni3LwkwIM8H/x9YN6bQ8r0DKOzx+/gF7K
+WXIrW4QAquPpJgUQiY9LDX6S6H2wfLrFcepY2+vwyO+yoAIaKRBVX3E/lZuu9BEt
+nKzV3j8a7M2Ce+131vxirj9b/gDOoFLaq6bOCLtg1AmV0R/+Q4Job2MraRAlI9Fv
+rQim8NnqwyKK6gTIz8WrDKzqTLVGvGhtSnwtBeubysv6DvMA2uN5kqHEyoiLhoby
+Oj6lUQAmlHa5zzwyQbFs29qiy0Gq0o8TWCyNPGfix01Xa4LeTDGyCaDIPnv48LCu
+8vvuL1VIkjMw8qOlaZGs
+=W1d3
+-----END PGP SIGNATURE-----
