@@ -1,6 +1,16 @@
 # ChangeLog for dev-libs/crypto++
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/ChangeLog,v 1.63 2010/12/27 21:41:36 ranger Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/ChangeLog,v 1.64 2011/01/08 03:53:12 c1pher Exp $
+
+  08 Jan 2011; Dane Smith <c1pher@gentoo.org> crypto++-5.6.1.ebuild:
+  Remove -DCRYPTOPP_DISABLE_ASM for amd64 in order to:
+  *Fix crypto++ issues on amd64 wrt amule as noted in bug 322713.
+  *Fix issues with tests on amd64 as noted in bug 343373.
+  There is an upstream patch to fix these issues with DCRYPTOPP_DISABLE_ASM
+  at
+  http://sourceforge.net/apps/trac/cryptopp/ticket/6 but as we no longer use
+  it,
+  I didn't include it.
 
   27 Dec 2010; Brent Baude <ranger@gentoo.org> crypto++-5.6.1.ebuild:
   stable ppc64, bug 343373
